[package]
name = "token-cloak"
version = "0.1.0"
description = "TokenCloak - ZK Privacy Transfer Protocol for SPL Tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_cloak"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
groth16-solana = "0.2.0"
solana-poseidon = "2.2"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
